# system

./: .gitignore  CMakeLists.txt  CMakePresets.json  codex_fix_mainwindow_strings.ps1  main_clean.cpp
acquisition/: CameraCaptureService.cpp  CameraCaptureService.h  CameraTypes.h  CaptureTypes.h  GalaxyCameraDevice.cpp  GalaxyCameraDevice.h  ICameraDevice.h  camera_probe.cpp
app/: StitchWorkflowService.cpp  StitchWorkflowService.h
cad_design/: DesignProfileAlignment.cpp  DesignProfileAlignment.h  DesignProfileFunction.cpp  DesignProfileFunction.h  DesignProfileTypes.h  LocalSlotAnalysis.cpp  LocalSlotAnalysis.h
cad_model/: CadModelLoader.cpp  CadModelLoader.h
calibration/: CalibrationService.cpp  CalibrationService.h  CalibrationTypes.h  CircleEdgeResponse.cpp  CircleEdgeResponse.h  TelecentricCalibIO.cpp  TelecentricCalibIO.h  TelecentricCalibrator.cpp  TelecentricCalibrator.h  TelecentricUndistort.cpp  TelecentricUndistort.h
cli/: main.cpp
common/: ImageFrameInfo.h  ProjectTypes.h  ResultPathUtils.h  RunTypes.h  TaskCallbacks.h
core/: SubpixelEdgeDetector.cpp  SubpixelEdgeDetector.h
docs/: StitchDataStructures.md
gui/: CalibrationConfigPanel.cpp  CalibrationConfigPanel.h  CalibrationWorker.cpp  CalibrationWorker.h  CameraCaptureWorker.cpp  CameraCaptureWorker.h  DesignModelPanel.cpp  DesignModelPanel.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  PointCloud3DViewer.cpp  PointCloud3DViewer.h  QtImageUtils.h  RunConfigPanel.cpp  RunConfigPanel.h  StepDetailPanel.cpp  StepDetailPanel.h  StepTableModel.cpp  StepTableModel.h  StitchWorker.cpp  StitchWorker.h  main.cpp
literature_fire_tube_compare/: README.md  batch_full_workflow_compare.py  compare_fire_tube_literature_baselines.py  literature_selection.md  repeatability_validation.py  requirements.txt
processing/: ProcessingTypes.h
reconstruction/: ReconstructionTypes.h
registration/: RegistrationTypes.h
report/: QualitySummaryBuilder.cpp  QualitySummaryBuilder.h  ReportTypes.h
report/figure_export/: README.md  cad_profile_preview.py  cjsi_standard_sphere_analysis.py  cjsi_workpiece_analysis.py  design_profile_figure.py  gui_design_plots.py  paper_figures.py  publication_figure.py  repeat10_workpiece_summary.py  standard_sphere_gbt57_figure.py  standard_sphere_global_pose_selection_figure.py  standard_sphere_global_repeat_residual_panels.py  standard_sphere_individual_residual_panels.py  standard_sphere_optimized_presentation_figure.py
result/: KEPT_RESULTS_20260525.md
standard_sphere_loop/: README.md  StandardSphereLoopExperiment.cpp  StandardSphereLoopExperiment.h  main.cpp
stitch/: Alignment.cpp  Alignment.h  Blending.cpp  Blending.h  DebugVis.cpp  DebugVis.h  EdgeProcessing.cpp  EdgeProcessing.h  Evaluation.cpp  Evaluation.h  GeometryUtils.cpp  GeometryUtils.h  IO.cpp  IO.h  Pipeline.cpp  Pipeline.h  PoseGraphOptimizer.cpp  PoseGraphOptimizer.h  StitchService.cpp  StitchService.h  StitchTypes.h
tools/: auto_optimize_stitch.py  cad_model_probe.cpp  design_reval_from_contour.cpp  workpiece_literature_comparison.py
